[package]
edition = "2018"
name = "rust-postgres"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
anyhow = "1.0.50"
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.72"
sqlx = {version = "0.5", features = ["runtime-actix-native-tls", "postgres"]}
# tokio = {version = "1", features = ["full"]}
